--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
+
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -42,6 +44,7 @@
     "@types/react": "^18.3.10",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
