--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "next build",
     "start": "next start",
     "test": "jest"
-
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -33,6 +32,7 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.53.0",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
     "tailwind": "^4.0.0",
     "uuid": "^10.0.0",
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/uuid": "^10.0.0",
